--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This project i seriously awesome, you guys.
+
+This project will help Treehouse students learn about working with Git repositories.
+
