Use totally instead of seriously

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This project i seriously awesome, you guys.
+This project i totally awesome, you guys.
 
 This project will help Treehouse students learn about working with Git repositories.
 
