--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This project i seriously awesome, you guys.
 
-This project will help Treehouse students learn about working with Git repositories.
+This project will help all the titally awesome Treehouse students learn about working with Git repositories.
 
